--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">CRA - Climate Resilient Agriculture</string>
 
     <string name="progresstitle">Loading... Please Wait</string>
+    <string name="somethingwentwrong">Something went wrong</string>
+    <string name="nointernet">Check your Network Connection</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
